Fix footer spacing issue. Add favicon.

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,6 @@ body {
   background-color: var(--white);
   color: var(--black);
   min-height: 100vh;
-  display: grid;
-  grid-template-rows: 1fr auto;
 }
 
 body::before {
@@ -254,7 +252,7 @@ address a:hover {
   min-height: 600px;
   height: 100vh;
   color: var(--white);
-  background-image: url(./images/ts-pier-wide.png);
+  background-image: url(./images/ts-pier-wide.jpg);
   background-color: var(--teal);
   background-position: center;
   background-repeat: no-repeat;
@@ -423,8 +421,7 @@ img.slide {
 /* Home - History */
 .history {
   background-color: var(--cream);
-  margin: 5em 2em;
-  padding: 0 1em;
+  padding: 5em 2em;
   text-align: center;
 }
 
@@ -570,12 +567,17 @@ section.activities-1.item {
   padding-top: 2em;
 }
 
+.faq-grid {
+  max-width: 100%;
+}
+
 .faq-grid h1 {
   margin-bottom: 1em;
 }
 
 .faq img {
   border: 3px solid var(--teal);
+  max-width: 95%;
 }
 
 .faqs h2, #map-anchor {
@@ -612,6 +614,11 @@ details:last-of-type {
   padding: 1rem 1rem 4rem;
   max-width: 1000px;
   height: 50vh;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
 }
 
 /* History */
@@ -709,7 +716,7 @@ details:last-of-type {
     /* margin: 0 auto; */
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(6, minmax(auto-fit, 1fr));
+    grid-template-rows: repeat(3, auto);
     gap: 3em;
     padding-bottom: 4em;
   }
